--- a/css/styles.css
+++ b/css/styles.css
@@ -171,40 +171,107 @@
 .about-us {
   width: 100%;
   padding: 50px;
-  background: linear-gradient(215deg, #eee0c9 28%, rgba(202, 242, 241, 0) 45%);
+  background: linear-gradient(241deg, #eee0c9 28%, rgba(202, 242, 241, 0) 57%);
   display: flex;
-  font-family: "ff-good-headline-web-pro-ext";
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 .logos {
-  margin-top: 70px;
-  flex-basis: 50%;
-  height: 80vh;
-  align-self: center;
+  flex-basis: 35%;
+  height: 400px;
+  margin-top: 200px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
+}
+.logos .sub {
+  font-family: "ff-good-headline-web-pro-ext";
+  width: 12px;
+  height: 13px;
+  color: #868782;
+  font-size: 18px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 1.8px;
+  position: relative;
+  top: -84px;
+  left: -74px;
 }
 .logos .logo2 {
-  width: 12vw;
-  margin-bottom: 50px;
+  margin-right: 15vh;
+  margin-bottom: 70px;
 }
 .logos .logo-sansara {
-  width: 20vw;
+  margin-right: 17vh;
 }
 .description {
-  height: 80vh;
-  margin-top: 60px;
-  align-self: center;
-  flex-basis: 50%;
-  font-size: 14px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  height: 400px;
+  flex-basis: 35%;
+  margin-top: 295px;
 }
-.description p:first {
-  margin-bottom: 40px;
+.description p {
+  width: 426px;
+  height: 114px;
+  color: #868782;
+  font-family: 'sofia-pro';
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0.07px;
+}
+.description p:last-of-type {
+  margin-top: 70px;
+}
+.people {
+  width: 477px;
+  height: 70px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  font-family: "ff-good-headline-web-pro-ext";
+  align-items: baseline;
+}
+.people .role {
+  color: #868782;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: 400;
+  letter-spacing: 1.6px;
+  margin-left: 3px;
+}
+.people .line {
+  height: 1px;
+  background-color: #333d3c;
+  margin-left: 3px;
+}
+.people .line.one {
+  width: 32px;
+}
+.people .line.two {
+  width: 100px;
+}
+.people .name {
+  color: #333d3c;
+  font-size: 24px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 2.4px;
+  margin-left: 3px;
+}
+.people button {
+  width: 60px;
+  height: 24px;
+  background-color: #bab8ac;
+  border: none;
+  font-family: "ff-good-headline-web-pro-ext";
+  font-size: 20px;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #ffffff;
+  letter-spacing: 2.4px;
+  margin-left: 12px;
 }
 * {
   margin: 0;
