--- a/less/about.less
+++ b/less/about.less
@@ -2,43 +2,110 @@
     width: 100%;
     // height: 100vh;
     padding: 50px;
-    background: linear-gradient(215deg, rgb(238, 224, 201) 28%, rgba(202, 242, 241, 0) 45%);
+    background: linear-gradient(241deg, rgb(238, 224, 201) 28%, rgba(202, 242, 241, 0) 57%);
     display: flex;
-    font-family:"ff-good-headline-web-pro-ext";
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 .logos {
-    margin-top: 70px;
-    flex-basis: 50%;
-    height: 80vh;
-    align-self: center;
+    flex-basis: 35%;
+    height: 400px;
+    margin-top: 200px;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
+    .sub {
+    font-family:"ff-good-headline-web-pro-ext";
+    width: 12px;
+    height: 13px;
+    color: #868782;
+    font-size: 18px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 1.8px;
+    position: relative;
+    top: -84px;
+    left: -74px;
+    }
     .logo2 {
-        // height: 15vh;
-        width: 12vw;
-        margin-bottom: 50px;
+        margin-right: 15vh;
+        margin-bottom: 70px;
     }
     .logo-sansara {
-        // height: 18vh;
-        width: 20vw
+         margin-right: 17vh;
     }
-
 }
 .description {
-    height: 80vh;
-    margin-top: 60px;
-    align-self: center;
-    flex-basis: 50%;
+    height: 400px;
+    flex-basis: 35%;
+    margin-top: 295px;
+    p {
+    width: 426px;
+    height: 114px;
+    color: #868782;
+    font-family: 'sofia-pro';
     font-size: 14px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    p:first {
-        margin-bottom: 40px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0.07px;
+    
     }
-    // font-family:"ff-good-headline-web-pro-ext";
-
+    p:last-of-type{
+        margin-top: 70px;
+    }
 }
+.people {
+    width: 477px;
+    height: 70px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    font-family:"ff-good-headline-web-pro-ext";
+    align-items: baseline;
+    .role {
+        color: #868782;
+        font-size: 16px;
+        text-transform: uppercase;
+        font-weight: 400;
+        letter-spacing: 1.6px;
+        margin-left: 3px;
+    }
+    .line {
+            height: 1px;
+            background-color: #333d3c;
+            margin-left: 3px;
+            &.one {
+                width: 32px;
+            }
+            &.two {
+                width: 100px;
+            }
+    }
+    .name {
+        color: #333d3c;
+        font-size: 24px;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 2.4px;
+        margin-left: 3px;
+    }
+    button {
+        width: 60px;
+        height: 24px;
+        background-color: #bab8ac;
+        border: none;
+        font-family:"ff-good-headline-web-pro-ext";
+        font-size: 20px;
+        font-weight: 600;
+        text-transform: uppercase;
+        color: #ffffff;
+        letter-spacing: 2.4px;
+        margin-left: 12px;
+    }
+}
+
+
+
+
