--- a/css/styles.css
+++ b/css/styles.css
@@ -201,7 +201,7 @@
 }
 .logos .logo2 {
   margin-right: 15vh;
-  margin-bottom: 70px;
+  margin-bottom: 90px;
 }
 .logos .logo-sansara {
   margin-right: 17vh;
@@ -272,6 +272,30 @@
   color: #ffffff;
   letter-spacing: 2.4px;
   margin-left: 12px;
+}
+.small-ball {
+  width: 20px;
+  height: 20px;
+  background: url("../img/small-ball.png");
+  background-size: cover;
+  position: relative;
+}
+.small-ball.one {
+  bottom: 74vh;
+  left: -15vw;
+}
+.small-ball.two {
+  top: -31vh;
+  left: 12vw;
+}
+.bigger-ball {
+  width: 60px;
+  height: 60px;
+  background: url("../img/metal-ball.png");
+  background-size: cover;
+  position: relative;
+  bottom: 44vh;
+  left: -21vw;
 }
 * {
   margin: 0;
