--- a/less/about.less
+++ b/less/about.less
@@ -31,7 +31,7 @@
     }
     .logo2 {
         margin-right: 15vh;
-        margin-bottom: 70px;
+        margin-bottom: 90px;
     }
     .logo-sansara {
          margin-right: 17vh;
@@ -105,7 +105,30 @@
         margin-left: 12px;
     }
 }
-
+.small-ball {
+    width: 20px;
+    height: 20px;
+    background: url("../img/small-ball.png");
+    background-size: cover;
+    position: relative;
+    &.one {
+        bottom: 74vh;
+        left: -15vw;
+    }
+    &.two {
+        top: -31vh;
+        left: 12vw;
+    }
+}
+.bigger-ball {
+    width: 60px;
+    height: 60px;
+    background: url("../img/metal-ball.png");
+    background-size: cover;
+    position: relative;
+    bottom: 44vh;
+    left: -21vw;
+}
 
 
 
