--- a/less/about.less
+++ b/less/about.less
@@ -1,8 +1,7 @@
 .about-us {
     width: 100%;
-    // height: 100vh;
     padding: 50px;
-    background: linear-gradient(241deg, rgb(238, 224, 201) 28%, rgba(202, 242, 241, 0) 57%);
+    background: linear-gradient(241deg, rgb(238, 224, 201) 28%, rgba(202, 242, 241, 0) 48%);
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -129,6 +128,11 @@
     bottom: 44vh;
     left: -21vw;
 }
-
-
+.slider-cloud {
+        position: absolute;
+        bottom: 1%;
+        left: -2%;
+        z-index: 1;
+        height: 50vh;
+    }
 
