--- a/less/header.less
+++ b/less/header.less
@@ -4,7 +4,6 @@
     padding: 30px 50px 0 50px;
     background: linear-gradient(302deg, rgb(238, 224, 201) 30%, rgb(202, 242, 241) 57%);
 }
-
 .nav-top {
     width: 100%;
     height: 1vh;
@@ -51,7 +50,6 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    
     a {
         font-family:"ff-good-headline-web-pro-ext";
         color: #333d3c;
@@ -73,8 +71,6 @@
     position: relative;
 }
 .sub-title {
-    // width: 252px;
-    // height: 17px;
     color: #333d3c;
     font-family:"ff-good-headline-web-pro-ext";
     font-size: 18px;
@@ -83,8 +79,6 @@
     letter-spacing: 2.4px;
 }
 .title {
-    // width: 567px;
-    // height: 55px;
     color: #333d3c;
     font-family:"ff-good-headline-web-pro-ext";
     font-size: 65px;
@@ -105,10 +99,10 @@
 }
 .box {
     position: relative;
-    bottom: 20vh;
+    bottom: 22vh;
     z-index: 1;
     img {
-        height: 80vh;
+        height: 89vh;
         margin: 0 auto;
     }
 }
@@ -118,9 +112,128 @@
     left: -7vh;
 
     z-index: -1;
-    opacity: 0.6;
+    opacity: 0.8;
     img {
         height: 45vh;
         margin: 0 auto;
     }
+}
+.scroll {
+    position: absolute;
+    top: 38%;
+    left: 35%;
+    z-index: 2;
+    p {
+        color: #333d3c;
+        font-family:"ff-good-headline-web-pro-ext";
+        text-transform: uppercase;
+        font-size: 18px;
+        font-weight: 600;
+        letter-spacing: 1.8px;
+        margin-bottom: 10px;
+    }
+    .vertical-line {
+        width: 2px;
+        height: 85px;
+        background-color: #333d3c;
+        margin: 0 auto;
+    }
+}
+.cloud {
+    position: absolute;
+    left: -69vh;
+    bottom: 67vh;
+    width: 14vw;
+}
+.ball-on-cloud {
+    position: absolute;
+    left: -55vh;
+    bottom: 75vh;
+    width: 4vw;
+}
+.ball-on-box {
+    position: absolute;
+    left: 29vh;
+    bottom: 81vh;
+    width: 1vw;
+    z-index: 2;
+}
+.ball-on-bean {
+    position: absolute;
+    left: 86vh;
+    bottom: 79vh;
+    width: 10vh;
+    z-index: 2; 
+}
+.bubble-on-top {
+    position: absolute;
+    left: 63vh;
+    top: 34vh;
+    width: 11vh;
+    z-index: 2;
+}
+.bubble-above-top {
+    position: absolute;
+    left: 84vh;
+    top: 25vh;
+    width: 4vh;
+    z-index: 2;
+}
+.bubble-right-top-corner {
+    position: absolute;
+    left: 18vh;
+    top: 16vh;
+    width: 8vh;
+    z-index: 2;
+}
+.ball-on-left-from-text {
+    position: absolute;
+    left: 3vh;
+    top: 9vh;
+    width: 12vh;
+    z-index: 2;
+}
+.blur-ball {
+    position: absolute;
+    left: 23vh;
+    top: 9vh;
+    width: 4vh;
+    z-index: 2;
+}
+.bubble-behide-text {
+    position: absolute;
+    left: 22vh;
+    top: -7vh;
+    width: 28vh;
+    z-index: -1;
+}
+.ball-above-text {
+    position: absolute;
+    left: 22vh;
+    top: -10vh;
+    width: 4vh;
+}
+.big-bubble {
+    position: absolute;
+    left: 10vh;
+    top: -19vh;
+    width: 10vh;
+}
+.small-bubble {
+    position: absolute;
+    left: 17vh;
+    top: -14vh;
+    width: 4vh;
+}
+.first-bubble {
+    position: absolute;
+    left: 17vh;
+    top: -24vh;
+    width: 3vh;
+}
+.ball-top {
+    position: absolute;
+    left: 22vh;
+    top: -28vh;
+    width: 20vh;
 }
