--- a/less/hamburger.less
+++ b/less/hamburger.less
@@ -8,9 +8,9 @@
     cursor: pointer;
     background: rgb(51, 61, 60);
     padding: 11px 0;
-    position: absolute;
+    position: fixed;
     right: 0;
-    top: 35vh;
+    top: 45vh;
 }
 .hamburger-menu,
 .hamburger-menu:after,
