--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,7 @@
 .scroll {
   position: absolute;
   top: 38%;
-  left: 35%;
+  left: 40.5%;
   z-index: 2;
 }
 .scroll p {
@@ -286,6 +286,54 @@
   left: 22vh;
   top: -28vh;
   width: 20vh;
+}
+@media screen and (max-width: 450px) {
+  .header {
+    width: 100%;
+    height: 70vh;
+    padding: 30px  15px 0 15px;
+  }
+  .header-content {
+    width: 95%;
+    margin-top: 10vh;
+  }
+  .social-media {
+    display: none;
+  }
+  .menu-wrapper {
+    top: 15vh;
+  }
+  .title {
+    font-size: 48px;
+    text-align: center;
+  }
+  .work-link {
+    border: 1px solid #ffffff;
+  }
+  .box {
+    bottom: 5vh;
+    margin: 0 auto;
+  }
+  .box img {
+    height: 35vh;
+  }
+  .box-shadow {
+    left: -2vh;
+    bottom: 20vh;
+  }
+  .box-shadow img {
+    height: 24vh;
+  }
+  .scroll {
+    top: 53%;
+    left: 34%;
+  }
+  .scroll p {
+    font-size: 10px;
+  }
+  .scroll .vertical-line {
+    height: 20px;
+  }
 }
 .about-us {
   width: 100%;
@@ -508,7 +556,6 @@
 .unpack {
   width: 100%;
   padding: 50px;
-  background: linear-gradient(289deg, #eee0c9 25%, rgba(202, 242, 241, 0) 48%);
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -645,4 +692,7 @@ li {
 .grid-parent {
   background: linear-gradient(90deg, #caf2f1 69%, #eee0c9 89%);
   position: relative;
+}
+.gradient-background {
+  background: linear-gradient(289deg, #eee0c9 25%, rgba(202, 242, 241, 0) 48%);
 }
