--- a/css/styles.css
+++ b/css/styles.css
@@ -290,7 +290,7 @@
 @media screen and (max-width: 450px) {
   .header {
     width: 100%;
-    height: 70vh;
+    height: 80vh;
     padding: 30px  15px 0 15px;
   }
   .header-content {
@@ -315,7 +315,7 @@
     margin: 0 auto;
   }
   .box img {
-    height: 35vh;
+    height: 49vh;
   }
   .box-shadow {
     left: -2vh;
@@ -333,6 +333,59 @@
   }
   .scroll .vertical-line {
     height: 20px;
+  }
+  .ball-on-bean {
+    left: 45vh;
+    bottom: 33vh;
+    width: 8vh;
+  }
+  .bubble-on-top {
+    left: 58%;
+    top: 45%;
+    width: 6vh;
+  }
+  .bubble-above-top {
+    left: 70%;
+    top: 35%;
+    width: 2vh;
+  }
+  .bubble-right-top-corner {
+    left: 13%;
+    top: 30%;
+    width: 5vh;
+  }
+  .ball-on-left-from-text {
+    left: -5%;
+    top: 9vh;
+    width: 9vh;
+  }
+  .blur-ball {
+    left: 27%;
+    top: 6%;
+  }
+  .bubble-behide-text {
+    left: 11%;
+    top: -1%;
+    width: 17vh;
+  }
+  .ball-above-text {
+    top: -3%;
+    width: 3vh;
+  }
+  .big-bubble {
+    top: -10%;
+    left: 34%;
+    width: 7vh;
+  }
+  .small-bubble {
+    left: 42%;
+    top: -8%;
+    width: 3vh;
+  }
+  .ball-top {
+    left: 43%;
+    top: -17%;
+    width: 11vh;
   }
 }
 .about-us {
