--- a/less/slider.less
+++ b/less/slider.less
@@ -80,3 +80,38 @@
         background-size: cover;
     }
 }
+@media screen and (max-width: 450px) {
+    .carusel {
+        width: 300px;
+        height: auto;
+        margin-top: 120px;
+        flex-direction: column;
+        padding-bottom: 0;
+        .carusel-text {
+            p {
+                text-align: left;
+                font-size: 14px;
+            }
+        }
+        .carusel-title {
+            width: 100%;
+            flex-basis: 10%;
+            border-left: 0;
+            border-top: 1px solid rgb(51, 61, 60);
+            padding-top: 15%;
+            margin-top: 10%;
+        }
+        .next-slide {
+            width: 50px;
+            height: 50px;
+            left: 33%;
+            bottom: 25px;
+        }
+        .slider-ball {
+            right: 35%;
+            bottom: -5%;
+            width: 40px;
+            height: 40px;
+        }
+    }
+}
