--- a/less/styles.less
+++ b/less/styles.less
@@ -16,6 +16,11 @@ li {
     list-style: none;
 }
 .grid-parent {
+    // width: 100%;
     background: linear-gradient(90deg, rgba(202,242,241,1) 69%, rgba(238,224,201,1) 89%);
     position: relative;
+}
+.gradient-background {
+    background: linear-gradient(289deg, rgb(238, 224, 201) 25%, rgba(202, 242, 241, 0) 48%);
+
 }
