fix img elements

--- a/less/header.less
+++ b/less/header.less
@@ -99,14 +99,14 @@
 }
 .box {
     position: relative;
-    bottom: 22vh;
+    bottom: 20vh;
     z-index: 1;
     // background: url(../img/box.png);
     // background-size: cover;
     // width: 113%;
     // height: 112%;
     img {
-        height: 89vh;
+        height: 80vh;
         margin: 0 auto;
     }
  }
@@ -148,6 +148,7 @@
     left: -69vh;
     bottom: 67vh;
     width: 14vw;
+    opacity: 0.8;
 }
 .ball-on-cloud {
     position: absolute;
@@ -164,16 +165,18 @@
 }
 .ball-on-bean {
     position: absolute;
-    left: 86vh;
+    left: 86%;
     bottom: 79vh;
     width: 10vh;
+    opacity: 0.7;
     z-index: 2; 
 }
 .bubble-on-top {
     position: absolute;
-    left: 63vh;
-    top: 34vh;
-    width: 11vh;
+    left: 63%;
+    top: 21%;
+    width: 10vh;
+    opacity: 0.8;
     z-index: 2;
 }
 .bubble-above-top {
@@ -185,30 +188,34 @@
 }
 .bubble-right-top-corner {
     position: absolute;
-    left: 18vh;
-    top: 16vh;
-    width: 8vh;
+    left: 11%;
+    top: 9%;
+    width: 7vh;
     z-index: 2;
 }
 .ball-on-left-from-text {
     position: absolute;
-    left: 3vh;
-    top: 9vh;
-    width: 12vh;
+    left: 4%;
+    top: 6%;
+    width: 6vh;
     z-index: 2;
 }
 .blur-ball {
     position: absolute;
-    left: 23vh;
-    top: 9vh;
-    width: 4vh;
+    left: 22%;
+    top: 5%;
+    width: 3vh;
+    filter: blur(2px);
     z-index: 2;
 }
 .bubble-behide-text {
     position: absolute;
     left: 22vh;
     top: -7vh;
-    width: 28vh;
+    width: 23vh;
+    opacity: 0.7;
+    filter: blur(1px);
+    transform: rotate(-20deg);
     z-index: -1;
 }
 .ball-above-text {
@@ -238,7 +245,7 @@
 .ball-top {
     position: absolute;
     left: 22vh;
-    top: -28vh;
+    top: -25%;
     width: 20vh;
 }
  @media screen and (max-width: 450px) {
@@ -249,7 +256,7 @@
      }
      .header-content {
         width: 95%;
-        margin-top: 10vh;
+        margin-top: 12vh;
     }
     .social-media {
         display: none;
@@ -280,7 +287,7 @@
     }
     .scroll {
         top: 53%;
-        left: 34%; 
+        left: 33%; 
         p {
             font-size: 10px;
         }
@@ -295,7 +302,7 @@
     }
     .bubble-on-top {
         left: 58%;
-        top: 45%;
+        top: 43%;
         width: 6vh;
     }
     .bubble-above-top {
@@ -311,7 +318,7 @@
     .ball-on-left-from-text {
         left: -5%;
         top: 9vh;
-        width: 9vh;
+        width: 5vh;
     }
     .blur-ball {
         left: 27%;
@@ -338,7 +345,7 @@
     }
     .ball-top {
         left: 43%;
-        top: -17%;
+        top: -23%;
         width: 11vh;
     }
  }
