--- a/less/about.less
+++ b/less/about.less
@@ -107,7 +107,7 @@
 .small-ball {
     width: 20px;
     height: 20px;
-    background: url("../img/small-ball.png");
+    background: url("../img/metal-ball.png");
     background-size: cover;
     position: relative;
     &.one {
@@ -131,9 +131,11 @@
 .slider-cloud {
         position: absolute;
         bottom: 58%;
-        left: -2%;
+        left: -28%;
         z-index: 1;
-        height: 50vh;
+        opacity: 0.7;
+        filter: blur(3px);
+        // height: 50vh;
     }
 @media screen and (max-width: 450px) {
     .about {
