add styles for sup title

--- a/less/unpack.less
+++ b/less/unpack.less
@@ -15,6 +15,16 @@
         text-transform: uppercase;
         letter-spacing: 24px;
         letter-spacing: 28.8px;
+        sup {
+            font-family:"ff-good-headline-web-pro-ext";
+            color: #868782;
+            font-size: 18px;
+            font-weight: 400;
+            text-transform: uppercase;
+            letter-spacing: 1.8px;
+            position: relative;
+            top: -18px;
+        }
     }
     .descr {
         width: 501px;
@@ -184,7 +194,7 @@
         margin-left: 0;
         img {
             width: 33vh;
-            right: 2px;
+            right: -3vh;
             bottom: 88px;
         }
     }
