--- a/css/styles.css
+++ b/css/styles.css
@@ -227,8 +227,8 @@
 }
 .bubble-above-top {
   position: absolute;
-  left: 84vh;
-  top: 25vh;
+  left: 84%;
+  top: 9%;
   width: 4vh;
   z-index: 2;
 }
@@ -527,10 +527,14 @@
 .slider-cloud {
   position: absolute;
   bottom: 58%;
-  left: -28%;
+  left: 0;
   z-index: 1;
   opacity: 0.7;
-  filter: blur(3px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -webkit-filter: blur(5px);
+  filter: blur(5px);
+  width: 20%;
 }
 @media screen and (max-width: 450px) {
   .about {
@@ -683,7 +687,7 @@
   right: 20%;
   width: 60px;
   height: 60px;
-  background: url("../img/slider-ball.png");
+  background: url("../img/ball-of-wibbly-wobbly-timey-wimey-stuff.png");
   background-size: cover;
 }
 @media screen and (max-width: 450px) {
@@ -727,6 +731,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
+  position: relative;
 }
 .unpack-title {
   font-family: "ff-good-headline-web-pro-ext";
@@ -814,6 +819,7 @@
 .safe img {
   left: 282px;
   bottom: -15px;
+  z-index: 2;
 }
 .safe p {
   width: 263px;
@@ -853,6 +859,116 @@
 }
 .success p {
   width: 263px;
+}
+.bubbles-and-balls img {
+  position: absolute;
+}
+.bubbles-and-balls img.one {
+  width: 2%;
+  top: 21%;
+  left: 31%;
+}
+.bubbles-and-balls img.two {
+  width: 5%;
+  top: 30%;
+  left: 13%;
+  filter: blur(2px);
+  transform: rotate(65deg);
+}
+.bubbles-and-balls img.three {
+  width: 7%;
+  top: 19%;
+  right: 8%;
+  filter: blur(6px);
+  transform: rotate(-33deg);
+}
+.bubbles-and-balls img.four {
+  width: 3%;
+  top: 22%;
+  right: 8%;
+  transform: rotate(59deg);
+}
+.bubbles-and-balls img.five {
+  width: 3%;
+  top: 44%;
+  left: 21%;
+}
+.bubbles-and-balls img.six {
+  width: 2%;
+  top: 37%;
+  right: 5%;
+}
+.bubbles-and-balls img.seven {
+  width: 18%;
+  top: 40%;
+  right: 21%;
+  z-index: 1;
+}
+.bubbles-and-balls img.eight {
+  width: 2%;
+  top: 47%;
+  right: 23%;
+}
+.bubbles-and-balls img.nine {
+  width: 13%;
+  height: 10%;
+  top: 47%;
+  right: 3%;
+  transform: rotate(105deg) scale(1, -1);
+}
+.bubbles-and-balls img.ten {
+  width: 15%;
+  top: 58%;
+  left: -4%;
+  opacity: 0.8;
+  filter: blur(6px);
+  transform: rotate(105deg) scale(1, -1);
+}
+.bubbles-and-balls img.eleven {
+  width: 1%;
+  top: 63%;
+  left: 15%;
+  opacity: 0.8;
+  filter: blur(1px);
+}
+.bubbles-and-balls img.twelve {
+  width: 2%;
+  top: 65%;
+  left: 20%;
+}
+.bubbles-and-balls img.thirteen {
+  width: 1%;
+  top: 74%;
+  right: 20%;
+}
+.bubbles-and-balls img.fourteen {
+  width: 5%;
+  top: 96%;
+  left: 17%;
+  opacity: 0.8;
+  filter: blur(1px);
+}
+.bubbles-and-balls img.fifteen {
+  width: 4%;
+  top: 97%;
+  left: 16%;
+  opacity: 0.8;
+  filter: blur(1px);
+}
+.bubbles-and-balls img.sixteen {
+  width: 5%;
+  top: 68%;
+  right: 25%;
+  opacity: 0.8;
+  filter: blur(3px);
+  transform: rotate(90deg);
+}
+.bubbles-and-balls img.seventeen {
+  width: 3%;
+  top: 75%;
+  right: 15%;
+  opacity: 0.8;
+  filter: blur(1px);
 }
 @media screen and (max-width: 450px) {
   .unpack {
